[gd_scene load_steps=6 format=3 uid="uid://5vkvd2nqcfdg"]

[ext_resource type="Script" uid="uid://rg5ygt3huo2l" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="ArrayMesh" uid="uid://pdp3d0430lie" path="res://assets/Voxel_Animal_Asset_Pack/Voxel_Animal_Asset_Pack/Animals/Fox/fox.vox.obj" id="2_g2els"]
[ext_resource type="ArrayMesh" uid="uid://ck1rnbfmvtryb" path="res://assets/KayKit_HalloweenBits_1.0_FREE/Assets/obj/skull.obj" id="3_qhqgy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2els"]
size = Vector3(0.789192, 0.983032, 0.818741)

[sub_resource type="BoxShape3D" id="BoxShape3D_qhqgy"]
size = Vector3(0.3, 0.16, 0.3)

[node name="Player" type="RigidBody3D"]
lock_rotation = true
linear_damp = 3.0
angular_damp = 1.0
script = ExtResource("1_3vyb7")

[node name="TwistPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="Camera" type="Camera3D" parent="TwistPivot/PitchPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="GroundRay" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -1.1, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="SquirrelMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = ExtResource("2_g2els")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.00118065, 0.246979, -0.0123329)
shape = SubResource("BoxShape3D_g2els")

[node name="PickableCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0.1, 1.49012e-08)
target_position = Vector3(0, 0, 1)

[node name="PumpkinArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PumpkinArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.469824, 0)
shape = SubResource("BoxShape3D_qhqgy")

[node name="Skull" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
visible = false
mesh = ExtResource("3_qhqgy")

[connection signal="body_entered" from="PumpkinArea" to="." method="_on_pumpkin_area_body_entered"]
